<resources>
    <string name="NewGame">New Game</string>
    <string name="JoinGame">Join Game</string>
    <string name="Settings">Settings</string>
    <string name="CreateGame">Create Game</string>
    <string name="Players">Players</string>
    <string name="NumberOfDecks">Number Of Decks</string>
    <string name="StartingCards">Starting Cards</string>
    <string name="ClientName">Client Name</string>
    <string name="Submit">Submit</string>
    <string name="Home">Home</string>
    <string name="app_name">J_and_G</string>
    <string name="Title">German Japan</string>
    <string name="Welcome">Welcome New User!</string>
    <string name="WelcomeInstructions">Enter Name Below To Continue</string>
    <string name="Game">Game</string>
    <string name="Visual">Visual</string>
    <string name="Other">Other</string>
    <string name="AutoGenSettings">Use Auto Generated Settings</string>
    <string name="SaveSettings">Save Settings</string>
    <string name="SequencesRequired">Sequences Required</string>
</resources>