<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/NewGame"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:onClick="onNewGameClicked"
        android:text="@string/NewGame"
        app:layout_constraintEnd_toEndOf="@+id/Title"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/Title"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/JoinGame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onJoinGameClicked"
        android:text="@string/JoinGame"
        app:layout_constraintBottom_toTopOf="@+id/Settings"
        app:layout_constraintEnd_toEndOf="@+id/NewGame"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/NewGame"
        app:layout_constraintTop_toBottomOf="@+id/NewGame" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:onClick="onSettingsClicked"
        android:text="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/JoinGame"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/JoinGame" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Title"
        android:textColor="@color/purple_700"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PlayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>